--- a/src/asciidraw/index.html
+++ b/src/asciidraw/index.html
@@ -5,8 +5,14 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AsciiDraw</title>
+    <style>
+      html {
+        background-color: rgb(23 23 23);
+        color: rgb(255 255 255);
+      }
+    </style>
   </head>
-  <body class="dark bg-neutral-900 text-white">
+  <body class="dark">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
