--- a/src/asciidraw/index.html
+++ b/src/asciidraw/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AsciiDraw</title>
   </head>
-  <body class="dark:bg-neutral-900 dark:text-white">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
