--- a/src/asciidraw/index.html
+++ b/src/asciidraw/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%; scroll-behavior: smooth;">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
@@ -11,8 +11,8 @@
     <meta property="og:image" content="https://asciidraw.github.io/open-graph-image.png">
     <meta property="og:description" content="Web based application for drawing ASCII diagrams">
   </head>
-  <body>
-    <div id="app"></div>
+  <body style="height: 100%;">
+    <div id="app" style="height: 100%;"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
