--- a/src/asciidraw/index.html
+++ b/src/asciidraw/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="scroll-behavior: smooth;">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AsciiDraw</title>
     <meta property="og:type" content="website">
