--- a/src/asciidraw/index.html
+++ b/src/asciidraw/index.html
@@ -5,11 +5,12 @@
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AsciiDraw</title>
+    <meta name="description" content="AsciiDraw - A Web based application for drawing ASCII diagrams" />
     <meta property="og:type" content="website">
     <meta property="og:title" content="AsciiDraw">
     <meta property="og:url" content="https://asciidraw.github.io">
     <meta property="og:image" content="https://asciidraw.github.io/open-graph-image.png">
-    <meta property="og:description" content="Web based application for drawing ASCII diagrams">
+    <meta property="og:description" content="A Web based application for drawing ASCII diagrams">
   </head>
   <body>
     <div id="app"></div>
