--- a/src/asciidraw/index.html
+++ b/src/asciidraw/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AsciiDraw</title>
     <meta name="description" content="AsciiDraw - A Web based application for drawing ASCII diagrams" />
+    <!-- open graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="AsciiDraw">
     <meta property="og:url" content="https://asciidraw.github.io">
     <meta property="og:image" content="https://asciidraw.github.io/open-graph-image.png">
     <meta property="og:description" content="A Web based application for drawing ASCII diagrams">
+    <!-- Google Search Console -->
+    <meta name="google-site-verification" content="p-WBJforKPVQ_cdCTFFZQVW8lpofeRoTrfXbnbZbUuo" />
   </head>
   <body>
     <div id="app"></div>
